// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingSpinner.vue matches snapshot 1`] = `
<div
  data-id="sds-loading-spinner"
  role="status"
>
  <svg
    class="animate-spin h-12 w-12"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
     
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
   
  <!---->
</div>
`;

exports[`LoadingSpinner.vue matches snapshot with no props assigned 1`] = `
"<div data-id=\\"sds-loading-spinner\\" role=\\"status\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" class=\\"animate-spin h-12 w-12\\">
    <circle cx=\\"12\\" cy=\\"12\\" r=\\"10\\" stroke=\\"currentColor\\" stroke-width=\\"4\\" class=\\"opacity-25\\"></circle>
    <path fill=\\"currentColor\\" d=\\"M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z\\" class=\\"opacity-75\\"></path>
  </svg>
  <!---->
</div>"
`;

exports[`LoadingSpinner.vue matches snapshot with size auto prop assigned 1`] = `
"<div data-id=\\"sds-loading-spinner\\" role=\\"status\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" class=\\"animate-spin\\">
    <circle cx=\\"12\\" cy=\\"12\\" r=\\"10\\" stroke=\\"currentColor\\" stroke-width=\\"4\\" class=\\"opacity-25\\"></circle>
    <path fill=\\"currentColor\\" d=\\"M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z\\" class=\\"opacity-75\\"></path>
  </svg>
  <!---->
</div>"
`;

exports[`LoadingSpinner.vue matches snapshot with size lg prop assigned 1`] = `
"<div data-id=\\"sds-loading-spinner\\" role=\\"status\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" class=\\"animate-spin h-20 w-20\\">
    <circle cx=\\"12\\" cy=\\"12\\" r=\\"10\\" stroke=\\"currentColor\\" stroke-width=\\"4\\" class=\\"opacity-25\\"></circle>
    <path fill=\\"currentColor\\" d=\\"M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z\\" class=\\"opacity-75\\"></path>
  </svg>
  <!---->
</div>"
`;

exports[`LoadingSpinner.vue matches snapshot with size sm prop assigned 1`] = `
"<div data-id=\\"sds-loading-spinner\\" role=\\"status\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" class=\\"animate-spin h-4 w-4\\">
    <circle cx=\\"12\\" cy=\\"12\\" r=\\"10\\" stroke=\\"currentColor\\" stroke-width=\\"4\\" class=\\"opacity-25\\"></circle>
    <path fill=\\"currentColor\\" d=\\"M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z\\" class=\\"opacity-75\\"></path>
  </svg>
  <!---->
</div>"
`;
